--- a/search-page/styles/search.css
+++ b/search-page/styles/search.css
@@ -2,29 +2,32 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 /* For the search bar */
 #search-container {
     background-color: rgba(248, 254, 212, 0.7);
-    width: 95.7vw;
-    float: left;
-    margin-top: -8px;
-    margin-left: -8px;
+    width: 100%;
+    height: 25vh;
+    margin: 0 auto;
     border: 1px solid black;
     border-radius: 5px;
-    padding: 2%;
 }
 
 #search-container p {
-    margin: none;
-    padding: none;
-    border: none;
+    margin-left: 2%;
 }
 
 form input:nth-child(1) {
     background-color: rgb(245, 148, 57, 0.7);
-    width: 95%;
+    width: 90%;
+    height: 50px;
+    margin-left: 2%;
     margin-top: -10px;
-    padding: 3% 0;
     padding-left: 5%;
     border: none;
     border-radius: 3px;
@@ -32,10 +35,11 @@ form input:nth-child(1) {
 
 form input:nth-child(2) {
     background-color: rgb(88, 164, 206, 0.7);
-    width: 95%;
+    width: 90%;
+    height: 50px;
+    margin-left: 2%;
     margin-top: 10px;
     margin-bottom: 5px;
-    padding: 3% 0;
     padding-left: 5%;
     border: none;
     border-radius: 3px;
@@ -48,6 +52,8 @@ form button {
     border: none;
     border-radius: 15px;
     float: right;
+    margin-right: 3%;
+    margin-bottom: 1%;
 }
 
 form button img {
@@ -56,23 +62,28 @@ form button img {
 
 /* For the map */
 #map {
-    height: 80vh;
-    width: 99.5vw;
-    margin-top: -8px;
-    margin-left: -8px;
+    border: 1px solid black;
+    height: 60vh;
+    width: 100%;
+    margin: 0 auto;
+    background-color: bl;
 }
 
 /* For the navbar */
 navbar {
     border: 1px solid black;
     background-color: rgba(228, 245, 255, 1);
-    width: 99.5vw;
-    height: 12.65vh;
-    padding-top: 20%;
-    margin-left: -8px;
+    width: 100%;
+    height: 15vh;
+    margin: 0 auto;
+    bottom: 0;
     float: left;
     display: flex;
     justify-content: space-between;
+}
+
+navbar button {
+    margin: auto 0;
 }
 
 navbar button:nth-child(1) {
@@ -81,7 +92,7 @@ navbar button:nth-child(1) {
     border-radius: 15px;
     border: none;
     background-color: rgb(0, 0, 0, 0);
-    margin-left: 10px;
+    margin-left: 4%;
     float: left;
 }
 
@@ -95,7 +106,7 @@ navbar button:nth-child(3) {
     border-radius: 15px;
     border: none;
     background-color: rgb(0, 0, 0, 0);
-    margin-right: 10px;
+    margin-right: 4%;
     float: right;
 }
 
@@ -115,4 +126,63 @@ navbar button:nth-child(2) {
 navbar button:nth-child(2) img {
     margin-left: -5px;
     margin-top: 0px;
+}
+
+/* For method selection box */
+#method-selection {
+    background-color: rgba(248, 254, 212, 0.7);
+    border: 1px solid black;
+    width: 100%;
+    height: 25vh;
+    border-radius: 3px;
+    bottom: 0;
+    display: none;
+}
+
+#method-selection-back-button {
+    background-color: rgb(0, 0, 0, 0);
+    border: none;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    margin-top: 5px;
+    margin-left: 20px;
+}
+
+#method-selection button img {
+    margin-left: -15px;
+}
+
+#transit-data {
+    display: flex;
+    width: 100%;
+}
+
+#method-selection-transit-option-button {
+    margin-left: 20px;
+    background-color: rgba(154, 251, 30, 1);
+    border: none;
+    border-radius: 10px;
+}
+
+#transit-data ul {
+    font-size: 0.7rem;
+    list-style-type: none;
+}
+
+
+#driving-data {
+    display: flex;
+}
+
+#method-selection-driving-option-button {
+    margin-left: 20px;
+    background-color: rgba(241, 72, 36, 1);
+    border: none;
+    border-radius: 10px;
+}
+
+#driving-data ul {
+    font-size: 0.7rem;
+    list-style-type: none;
 }
