--- a/search-page/styles/search.css
+++ b/search-page/styles/search.css
@@ -9,11 +9,10 @@ body {
 }
 
 /* For the search bar */
-#search-container {
+.search-process-container {
     background-color: rgba(248, 254, 212, 0.7);
     width: 100%;
     height: 25vh;
-    margin: 0 auto;
     border: 1px solid black;
     border-radius: 5px;
 }
@@ -65,7 +64,6 @@ form button img {
     border: 1px solid black;
     height: 60vh;
     width: 100%;
-    margin: 0 auto;
     background-color: bl;
 }
 
@@ -75,7 +73,6 @@ navbar {
     background-color: rgba(228, 245, 255, 1);
     width: 100%;
     height: 15vh;
-    margin: 0 auto;
     bottom: 0;
     float: left;
     display: flex;
@@ -129,7 +126,7 @@ navbar button:nth-child(2) img {
 }
 
 /* For method selection box */
-#method-selection {
+#method-selection-container {
     background-color: rgba(248, 254, 212, 0.7);
     border: 1px solid black;
     width: 100%;
@@ -139,7 +136,7 @@ navbar button:nth-child(2) img {
     display: none;
 }
 
-#method-selection-back-button {
+.back-button {
     background-color: rgb(0, 0, 0, 0);
     border: none;
     width: 30px;
@@ -153,7 +150,7 @@ navbar button:nth-child(2) img {
     margin-left: -15px;
 }
 
-#transit-data {
+#transit-route-information {
     display: flex;
     width: 100%;
 }
@@ -165,13 +162,13 @@ navbar button:nth-child(2) img {
     border-radius: 10px;
 }
 
-#transit-data ul {
+#transit-route-information ul {
     font-size: 0.7rem;
     list-style-type: none;
 }
 
 
-#driving-data {
+#driving-route-information {
     display: flex;
 }
 
@@ -182,7 +179,49 @@ navbar button:nth-child(2) img {
     border-radius: 10px;
 }
 
-#driving-data ul {
+#driving-route-information ul {
     font-size: 0.7rem;
     list-style-type: none;
+}
+
+/* For transit route details box */
+.save-journey-button {
+    border: none;
+    border-radius: 5px;
+    padding: 8px;
+    background-color: rgba(154, 251, 30, 1);
+
+}
+
+.option-details {
+    margin-left: 40px;
+}
+
+#transit-option-details-container {
+    display: none;
+}
+
+/* For driving route details box */
+#driving-option-details-container {
+    display: none;
+}
+
+/* Saved transit route */
+.journey-saved-container {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.journey-saved-container p:nth-child(1) {
+    margin-top: 30px;
+}
+
+#transit-option-journey-saved-container {
+    display: none;
+}
+
+/* Saved driving route */
+#driving-option-journey-saved-container {
+    display: none;
 }
