--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -9,7 +9,7 @@
 }
 
 /* For the search bar */
-#search-container {
+.search-process-container {
   background-color: rgba(248, 254, 212, 0.7);
   width: 100%;
   height: 25vh;
@@ -160,11 +160,14 @@
   background-color: rgba(154, 251, 30, 1);
   border: none;
   border-radius: 10px;
+  padding: 10px;
 }
 
 #transit-route-information ul {
   font-size: 0.7rem;
   list-style-type: none;
+  display: block;
+  margin: auto 0;
 }
 
 #driving-route-information {
@@ -176,14 +179,22 @@
   background-color: rgba(241, 72, 36, 1);
   border: none;
   border-radius: 10px;
+  padding: 10px;
 }
 
 #driving-route-information ul {
   font-size: 0.7rem;
   list-style-type: none;
+  display: block;
+  margin: auto 0;
 }
 
 /* For transit route details box */
+#transit-option-details-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .save-journey-button {
   border: none;
   border-radius: 5px;
