--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -27,7 +27,7 @@
   width: 95%;
   height: 50px;
   margin-left: 2%;
-  margin-top: -10px;
+  margin-top: 6%;
   padding-left: 5%;
   border: none;
   border-radius: 3px;
@@ -190,30 +190,48 @@
 }
 
 /* For transit route details box */
-#transit-option-details-container {
-  display: flex;
-  flex-direction: column;
-}
-
 .save-journey-button {
   border: none;
   border-radius: 5px;
+  margin: auto;
   padding: 8px;
   background-color: rgba(154, 251, 30, 1);
-
 }
 
 .option-details {
   margin-left: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 #transit-option-details-container {
   display: none;
+}
+
+#transit-option-details-container ul {
+  display: flex;
+  flex-direction: column;
+  margin-left: -40px;
+}
+
+#transit-option-details-container ul li {
+  font-size: 0.8rem;
 }
 
 /* For driving route details box */
 #driving-option-details-container {
   display: none;
+}
+
+#driving-option-details-container ul {
+  display: flex;
+  flex-direction: column;
+  margin-left: -40px;
+}
+
+#driving-option-details-container ul li {
+  font-size: 0.8rem;
 }
 
 /* Saved transit route */
