--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -12,9 +12,11 @@
 .search-process-container {
   background-color: rgba(248, 254, 212, 0.7);
   width: 100%;
-  height: 25vh;
+  height: fit-content;
   border: 1px solid black;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
 }
 
 #search-container p {
@@ -27,7 +29,6 @@
   width: 95%;
   height: 50px;
   margin-left: 2%;
-  margin-top: 6%;
   padding-left: 5%;
   border: none;
   border-radius: 3px;
@@ -51,9 +52,8 @@
   width: 42px;
   border: none;
   border-radius: 15px;
-  float: right;
-  margin-right: 3%;
   margin-bottom: 1%;
+  margin-left: 5%;
 }
 
 #submit-search-button img {
