--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -53,7 +53,8 @@
   border: none;
   border-radius: 15px;
   margin-bottom: 1%;
-  margin-left: 5%;
+  margin-right: 3%;
+  align-self: flex-end;
 }
 
 #submit-search-button img {
