--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -26,7 +26,7 @@
 
 #userHistory{
     margin:5vw 5vw 0vw 5vw;
-    padding-bottom:19.5vw;
+    padding-bottom: 15vh;
 }
 
 #avatar{
@@ -37,21 +37,56 @@
     margin-left:0vw;
 }
 
-#editbutton{
-    margin: 1vw;
-}
-
 #togglebutton{
     max-width:10%;
     margin-left: 1em;
     float:left;
 }
 
-.navbar{
-    position: absolute; 
-bottom: 0;
+#saveEdits{
+    margin:1vw;
 }
 
-#saveEdits{
-    margin:1em;
+#nameForm{
+    display:flex;
+    justify-content: center;
+    margin-top:1em;
+    align-self: center;
+}
+
+#emailForm{
+    display:flex;
+    justify-content: center;
+    margin-top:1em;    
+    align-self: center;
+}
+
+#nameForm > img{
+    align-self: center;
+}
+
+#emailForm > img{
+    align-self: center;
+}
+
+#profileHeader{
+    margin-right:2vw;
+}
+
+
+#editbutton{
+    margin: 1vw;
+}
+
+
+#toggleHeader{
+    background-color: #1A8FDD;
+}
+
+
+
+#toggleButton{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
 }
