--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -9,6 +9,16 @@
 }
 
 /* For the search bar */
+.bcit-search-process-container {
+  background-color: rgba(248, 254, 212, 0.7);
+  width: 100%;
+  height: fit-content;
+  border: 1px solid black;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
 .search-process-container {
   background-color: rgba(248, 254, 212, 0.7);
   width: 100%;
