add message alert upon profile update

--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -98,3 +98,18 @@
 /* #uploadbutton{
     display:none;
 } */
+
+#messagebox{
+    margin:auto;
+    margin-top:1em;
+    display:none;
+    max-width: 80%;
+    
+}
+
+#errorbox{
+    margin:auto;
+    margin-top: 1em;
+    display:none;
+    max-width: 80%;
+}
