--- a/src/styles/navigation-bar.css
+++ b/src/styles/navigation-bar.css
@@ -1,12 +1,6 @@
 #navigation-bar {
-    background-color: rgb(248, 255, 200);
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid rgb(160, 156, 156);
-}
-
-#navigation-bar a{
-    color: black;
 }
 
 #navigation-links {
@@ -17,4 +11,29 @@
 
 #logout {
     margin-top: 0px;
+}
+
+.navbar {
+    background-color: rgb(248, 255, 200);
+    border-bottom: 1px solid rgb(160, 156, 156);
+}
+
+.navbar a{
+    color: black;
+}
+
+.bcit-navigation-bar {
+    padding: 10px;
+    background-color: rgb(0, 60, 113);
+    border-bottom: 1px solid white;
+}
+
+.bcit-navigation-bar a{
+    color: white;
+}
+
+.bcit-navigation-bar button {
+    background-color: yellow;
+    border-color: yellow;
+    color: black;
 }
