--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -95,64 +95,6 @@
   background-color: bl;
 }
 
-/* For the BCIT navbar*/
-.bcit-navbar {
-  border: 1px solid black;
-  background-color: rgba(255, 255, 255, 1);
-  width: 100%;
-  height: 15vh;
-  bottom: 0;
-  float: left;
-  display: flex;
-  justify-content: space-between;
-}
-
-.bcit-navbar a {
-  margin: auto 0;
-}
-
-.bcit-navbar a:nth-child(1) button {
-  height: 42px;
-  width: 42px;
-  border-radius: 15px;
-  border: none;
-  background-color: rgb(0, 0, 0, 0);
-  margin-left: 3%;
-  float: left;
-}
-
-.bcit-navbar a:nth-child(1) button img {
-  margin-left: -5px;
-}
-
-.bcit-navbar a:nth-child(3) button {
-  height: 42px;
-  width: 42px;
-  border-radius: 15px;
-  border: none;
-  background-color: rgb(0, 0, 0, 0);
-  margin-right: 0%;
-  float: right;
-}
-
-.bcit-navbar a:nth-child(3) button img {
-  margin-left: -5px;
-}
-
-.bcit-navbar a:nth-child(2) button {
-  height: 60px;
-  width: 170px;
-  border-radius: 15px;
-  border: none;
-  background-color: rgb(0, 0, 0, 0);
-  margin-right: 10px;
-}
-
-.bcit-navbar a:nth-child(2) button img {
-  margin-left: -5px;
-  margin-top: 0px;
-}
-
 /* For route details box */
 #route-details-container {
   height: 25vh;
@@ -238,4 +180,73 @@
   .bcit-navbar a:nth-child(2) button {
     width:50vw;
   }
+}
+
+/*Off-screen Tacos*/
+.taco1 {
+  position: absolute;
+  width: 10vw;
+  top: -10vw;
+}
+.taco2 {
+  position: absolute;
+  width: 10vw;
+  top: -10vw;
+}
+.taco3 {
+  position: absolute;
+  width: 10vw;
+  top: -10vw;
+}
+.taco4 {
+  position: absolute;
+  width: 10vw;
+  top: -10vw;
+}
+
+/*Falling Tacos*/
+#taco-div {
+  overflow: hidden;
+}
+@keyframes falling{
+  from {
+    top: -10vw;
+    transform: rotate(0deg);
+  }
+  to {
+    top: 150vw;
+    transform: rotate(720deg);
+  }
+}
+
+.falling-taco1 {
+  position: relative;
+  width: 10vw;
+  animation-name: falling;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+.falling-taco2 {
+  position: relative;
+  width: 10vw;
+  top: -10vw;
+  animation-name: falling;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+.falling-taco3 {
+  position: relative;
+  width: 10vw;
+  top: -5vw;
+  animation-name: falling;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+.falling-taco4 {
+  position: relative;
+  width: 10vw;
+  top: -15vw;
+  animation-name: falling;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
 }
