--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -1,6 +1,6 @@
 .profileBody{
     background-color: rgb(248, 255, 208);
-    min-height: 900px;
+    min-height: 100vh;
     height: fit-content;
 }
 
@@ -15,7 +15,7 @@
 
 #userHistory{
     margin:5vw 5vw 0vw 5vw;
-    padding-bottom: 20vh; /* change to sticky later */ 
+    padding-bottom: 5vh; /* change to sticky later */ 
 }
 
 #avatar{
@@ -49,9 +49,6 @@
     margin-top:1em;    
 }
 
-
-
-
 #profileHeader{
     margin-right:2vw;
 }
@@ -59,7 +56,6 @@
 #toggleHeader{
     background-color: #1A8FDD;
 }
-
 
 #toggleButton{
     text-decoration: none;
