--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -251,7 +251,7 @@
 
 #accept-button {
   background-color: rgba(154, 251, 30, 1);
-  border: 1px solid black;
+  border: none;
   border-radius: 5px;
 }
 
