--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -59,7 +59,12 @@
 #location-error {
   flex-grow: 9;
   color: rgb(248, 255, 208);
-  
+}
+
+#no-result-error {
+  flex-grow: 9;
+  color: rgb(248, 255, 208);
+  z-index: 10;
 }
 
 #search-container p {
