add navbar to login page

--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -43,3 +43,12 @@
     background-color: yellow;
     margin: auto;
 }
+
+#login-navbar{
+    float:right;
+    margin:1em;
+}
+
+#map-nav{
+    margin-right:1em;
+}
