--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -15,7 +15,7 @@
 
 #userHistory{
     margin:5vw 5vw 0vw 5vw;
-    padding-bottom: 5vh; /* change to sticky later */ 
+    padding-bottom: 5vh;
 }
 
 #avatar{
