--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -249,6 +249,10 @@
   padding: 0 20px;
 }
 
+#facebook-share-button {
+  margin-right: 10px;
+}
+
 #accept-button {
   background-color: rgba(154, 251, 30, 1);
   border: none;
