--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -257,6 +257,8 @@
   background-color: rgba(154, 251, 30, 1);
   border: none;
   border-radius: 5px;
+  width: 50px;
+  height: 50px;
 }
 
 @media (max-width: 300px) {
