--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -183,8 +183,11 @@
 /* For route details box */
 #route-details-container {
   height: 25vh;
-  display: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
+
 
 .back-button {
   background-color: rgb(0, 0, 0, 0);
@@ -204,14 +207,21 @@
   list-style-type: none;
   display: block;
 }
+#route-details-buttons {
+  max-width: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin : auto;
+}
 
 .save-journey-button {
   border: none;
   border-radius: 5px;
-  margin: auto;
   padding: 8px;
   background-color: rgba(154, 251, 30, 1);
-  width: 60%;
+  
+  min-width: 50%;
   margin-bottom: 10px;
 }
 
