--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -2,9 +2,6 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
-
-
 .main-viewport {
   overflow: hidden;
   position: relative;
@@ -199,18 +196,6 @@
   margin-left: 20px;
 }
 
-
-#travel-details-back-button{
-  margin-left: 5px;
-  z-index: 10;
-}
-
-#travel-details-header{
-  margin-top: 5px;
-  display: flex;
-  flex-direction: row;
-}
-
 #route-details-container button img {
   margin-left: -15px;
 }
@@ -262,10 +247,23 @@
   text-align: center;
   height: 25vh;
 }
+
+/* Travel details */
+
+#travel-details-back-button {
+  margin-left: 5px;
+  z-index: 10;
+}
+
+#travel-details-header {
+  margin-top: 5px;
+  display: flex;
+  flex-direction: row;
+}
+
 #travel-details-container {
   color: grey(154, 251, 30, 1);
   background: rgb(248, 255, 208);
-  text-shadow: #9C9C9C 1px 1px 0px;
 }
 
 #travel-details-title {
